Location box visibility fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,3 +206,7 @@ html, body {
     border-radius: 4px;
 
 }
+
+.location-stuff{
+    display: none;
+}
